--- a/Views/User/LogReg.cshtml
+++ b/Views/User/LogReg.cshtml
@@ -1,2 +1,4 @@
-<partial name="_Register"></partial>
-<partial name="_Login"></partial>
+<div class="mx-auto w-50 d-flex justify-content-between">
+    <partial name="_Register"></partial>
+    <partial name="_Login"></partial>
+</div>
