--- a/Views/User/LogReg.cshtml
+++ b/Views/User/LogReg.cshtml
@@ -1,3 +1,4 @@
+    <h1 class="mb-3 text-center">Welcome to iTravel</h1>
 <div class="mx-auto w-50 d-flex justify-content-between">
     <partial name="_Register"></partial>
     <partial name="_Login"></partial>
