Added Friend System

--- a/Views/User/UserProfile.cshtml
+++ b/Views/User/UserProfile.cshtml
@@ -1,3 +1,8 @@
-@model User
-
-<h1>@Model.Full()</h1>
+<div class="card">
+    <h1>@ViewBag.User.Username</h1>
+    <h1>@ViewBag.User.UserId</h1>
+    <h4>@Context.Session.GetInt32("id")</h4>
+    <partial name="_Friend"/>
+</div>
+<partial name="_Requests"/> 
+<partial name="_ListOfFriends"/>
