Fine tune friend front-end

--- a/Views/User/_Friend.cshtml
+++ b/Views/User/_Friend.cshtml
@@ -1,6 +1,6 @@
 @if (ViewBag.User.UserId == Context.Session.GetInt32("id"))
 {
-    <a href="/edit/user/@ViewBag.User.UserId">Edit your profile</a>
+    <a class="btn btn-primary" href="/edit/user/@ViewBag.User.UserId">Edit your profile</a>
 } else if (ViewBag.Friend == null)
 {
     <form asp-controller="User" asp-action="SendFriendRequest" asp-route-pid="@ViewBag.User.UserId" method="post">
