--- a/Views/Shared/Dashboard.cshtml
+++ b/Views/Shared/Dashboard.cshtml
@@ -1,20 +1,19 @@
 @model List<Destination>
 
+<a href="/create/destination/form" class="btn btn-primary">Create a Destination here!</a>
+
 <div class="PostContainer mx-auto w-50">
     @foreach (Destination item in Model)
     {
         <div class="Post border mb-5 p-3">
+            @if(item.Image.Length > 3)
+            {
+                <img src="~/uploads/@item.Image" style="width: 300px;" alt="@item.Image">
+            }
             <h3>@item.Place()</h3>
             <h4>@item.DestinationMessage</h4>
-            <h5>@item.Creator.Username</h5>
-            @* @if(item.Image != null)
-            {
-                <img src="@item.Image" alt="noimg">
-            } *@
+            <h5><a href="/user/@item.Creator.UserId">@item.Creator.Username</a></h5>
             <!-- Need to find a way to use google maps to geolocate (statically) -->
         </div>
     }
 </div>
-
-
-<a href="/create/destination/form">Create a Destination here!</a>
