Removed password change

--- a/Views/User/EditForm.cshtml
+++ b/Views/User/EditForm.cshtml
@@ -23,7 +23,7 @@
         <span asp-validation-for="Password" class="text-danger"></span>
         <input asp-for="Password" class="form-control mb-4">
     </div>
-    <div class="mx-auto w-25">
+    @* <div class="mx-auto w-25">
         <label asp-for="NewPassword"></label>
         <span asp-validation-for="NewPassword" class="text-danger"></span>
         <input asp-for="NewPassword" class="form-control mb-4">
@@ -32,7 +32,7 @@
         <label asp-for="ConfirmNewPassword"></label>
         <span asp-validation-for="ConfirmNewPassword" class="text-danger"></span>
         <input asp-for="ConfirmNewPassword" class="form-control mb-4">
-    </div>
+    </div> *@
     <button class="btn btn-primary" type="submit">Save Changes</button>
     <!--Need to continue, commented out the post method so this doesn't work anymore-->
 </form>
