--- a/Views/Shared/Dashboard.cshtml
+++ b/Views/Shared/Dashboard.cshtml
@@ -1,28 +1,33 @@
 @model List<Destination>
 
-<a href="/create/destination/form" class="btn btn-primary">Create a Destination here!</a>
 
 <div class="PostContainer mx-auto w-50">
+    <a href="/create/destination/form" class="btn btn-primary mx-auto mb-4">Make a post!</a>
     @foreach (Destination item in Model)
     {
         <div class="Post border mb-5 p-3">
-            @if(item.Image.Length > 3)
-            {
-                <img src="~/uploads/@item.Image" style="width: 300px;" alt="@item.Image">
-            }
-            <h3>@item.Place()</h3>
-            <h4>@item.DestinationMessage</h4>
+            <div class="img_map d-flex justify-content-between mb-3">
+                @if(item.Image.Length > 3)
+                {
+                    <img src="~/uploads/@item.Image" style="width: 300px;" alt="@item.Image">
+                }
+                <div class="location">
+                    <iframe
+                        width="275"
+                        height="225"
+                        style="border:0"
+                        loading="lazy"
+                        allowfullscreen
+                        referrerpolicy="no-referrer-when-downgrade"
+                        src="https://www.google.com/maps/embed/v1/place?key=AIzaSyC---njpOqPkCYvMRYE-MxexQWdqC_s_h4
+                        &q=@item.Query()">
+                    </iframe>
+                    <h4 class="word-wrap">@item.Place()</h4>
+                </div>
+                
+            </div>
             <h5><a href="/user/@item.Creator.UserId">@item.Creator.Username</a></h5>
-            <iframe
-                width="300"
-                height="225"
-                style="border:0"
-                loading="lazy"
-                allowfullscreen
-                referrerpolicy="no-referrer-when-downgrade"
-                src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCX7AQEGR_2IfhlXbx9bTlKUPLVd-0b10Y
-                &q=@item.Query()">
-            </iframe>
+            <h6>@item.DestinationMessage</h6>
         </div>
     }
 </div>
