--- a/Views/Shared/Dashboard.cshtml
+++ b/Views/Shared/Dashboard.cshtml
@@ -5,7 +5,7 @@
     <a href="/create/destination/form" class="btn btn-primary mx-auto mb-4">Make a post!</a>
     @foreach (Destination item in Model)
     {
-        <div class="Post border mb-5 p-3">
+        <div class="Post mb-5 p-3">
             <div class="img_map d-flex justify-content-between mb-3">
                 @if(item.Image.Length > 3)
                 {
