--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,30 +10,24 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
+            <div class="container-fluid d-flex justify-content-between mx-auto w-50">
                 <a class="navbar-brand">iTravel</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        @if (@Context.Session.GetInt32("id") != null)
-                        {
-                            int? id = @Context.Session.GetInt32("id");
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Dashboard">Dashboard</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="btn btn-primary me-4" href="/user/@id">Profile</a>
-                            </li>
-                            <li class="nav-item">
-                                <form asp-controller="User" asp-action="Logout" method="post"><button class="btn btn-danger">Logout</button></form>
-                            </li>
-                        }
-                    </ul>
-                </div>
+                <ul class="navbar-nav">
+                    @if (@Context.Session.GetInt32("id") != null)
+                    {
+                        int? id = @Context.Session.GetInt32("id");
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Dashboard">Dashboard</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn btn-primary me-4" href="/user/@id">Profile</a>
+                        </li>
+                        <li class="nav-item">
+                            <form asp-controller="User" asp-action="Logout" method="post"><button class="btn btn-danger">Logout</button></form>
+                        </li>
+                    }
+                </ul>
             </div>
         </nav>
     </header>
