--- a/Views/User/_Friend.cshtml
+++ b/Views/User/_Friend.cshtml
@@ -1,12 +1,14 @@
 @if (ViewBag.User.UserId == Context.Session.GetInt32("id"))
 {
-    <a class="btn btn-primary" href="/edit/user/@ViewBag.User.UserId">Edit your profile</a>
-} else if (ViewBag.Friend == null)
+        <a href="/edit/user/@ViewBag.User.UserId"> <button class="btn btn-primary"> Edit your profile</button></a>
+} 
+else if (ViewBag.Friend == null)
 {
     <form asp-controller="User" asp-action="SendFriendRequest" asp-route-pid="@ViewBag.User.UserId" method="post">
         <button class="btn btn-success">Add Friend</button>
     </form>
-} else if ((ViewBag.Friend.UserOneId == Context.Session.GetInt32("id") && ViewBag.Friend.Relationship == "Friends") || (ViewBag.Friend.UserTwoId == Context.Session.GetInt32("id") && ViewBag.Friend.Relationship == "Friends"))
+} 
+else if ((ViewBag.Friend.UserOneId == Context.Session.GetInt32("id") && ViewBag.Friend.Relationship == "Friends") || (ViewBag.Friend.UserTwoId == Context.Session.GetInt32("id") && ViewBag.Friend.Relationship == "Friends"))
 {
     <h1>You guys are friends!</h1>
     <form asp-controller="User" asp-action="CancelRequest" asp-route-pid=@ViewBag.User.UserId method="post">
