more color changes - its better i promise

--- a/Views/Destination/DestinationForm.cshtml
+++ b/Views/Destination/DestinationForm.cshtml
@@ -48,8 +48,8 @@
     </div>
     <div class="post-generation">
         <h1>view post before posting</h1>
-        <div class="Post h-test">
-
+        <div class="Post h-test text-center">
+            <h2>(Under Construction)</h2>
         </div>
     </div>
 </div>
