--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -17,8 +17,8 @@
                     @if (@Context.Session.GetInt32("id") != null)
                     {
                         int? id = @Context.Session.GetInt32("id");
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Dashboard">Dashboard</a>
+                        <li >
+                            <a class="nav-link" style="color: #fff;" id="dashboard" asp-area="" asp-controller="User" asp-action="Dashboard">Dashboard</a>
                         </li>
                         <li class="nav-item">
                             <a class="btn btn-primary me-4" href="/user/@id">Profile</a>
@@ -37,11 +37,11 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    @* <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2022 - iTravel - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
-    </footer>
+    </footer> *@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
