--- a/Views/Shared/Dashboard.cshtml
+++ b/Views/Shared/Dashboard.cshtml
@@ -1,10 +1,19 @@
 @model List<Destination>
 
-
 <div class="PostContainer mx-auto w-50">
-    <div class="d-flex justify-content-between align-items-center">
-        <a href="/create/destination/form" class="btn btn-primary mx-auto mb-4">Make a post!</a>
-    </div>
+    @if(Context.Session.GetInt32("notLogged") == 1)
+    {
+        <h3 class="text-center my-4" style="margin-top: 6px;">Welcome, @Context.Session.GetString("username")!</h3>
+        <div class="d-flex justify-content-between align-items-center">
+            <a href="/create/destination/form" class="btn btn-primary mx-auto mb-4">Make a post!</a>
+        </div>
+    }
+    else
+    {
+        <div class="text-center">
+            <a href="/login/register"><button class="btn btn-success mb-3">Login / Register</button></a>
+        </div>
+    }
     @foreach (Destination item in Model)
     {
         <div class="Post mb-5 p-3">
