--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,24 +9,28 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/iTravel.styles.css" asp-append-version="true" />
 </head>
+
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
-            <div class="container-fluid d-flex justify-content-between mx-auto w-50">
+        <nav class="navbar navbar-expand-sm border-bottom mb-3">
+            <div class="center-nav container-fluid d-flex justify-content-between align-items-center mx-auto">
                 <a class="navbar-brand">iTravel</a>
-                <ul class="navbar-nav">
+                    <partial name="_searchBar"></partial>
+                    <ul class="navbar-nav align-items-center">
+                        <li>
+                            <a class="nav-link" style="color: #fff;" id="dashboard" asp-area="" asp-controller="User"
+                            asp-action="Dashboard">Dashboard</a>
+                        </li>
                     @if (@Context.Session.GetInt32("id") != null)
                     {
                         int? id = @Context.Session.GetInt32("id");
-                        <li >
-                            <a class="nav-link" style="color: #fff;" id="dashboard" asp-area="" asp-controller="User" asp-action="Dashboard">Dashboard</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="btn btn-primary me-4" href="/user/@id">Profile</a>
-                        </li>
-                        <li class="nav-item">
-                            <form asp-controller="User" asp-action="Logout" method="post"><button class="btn btn-danger">Logout</button></form>
-                        </li>
+                            <li class="nav-item">
+                                <a class="btn btn-primary me-4" href="/user/@id">Profile</a>
+                            </li>
+                            <li class="nav-item">
+                                <form asp-controller="User" asp-action="Logout" method="post"><button
+                                    class="btn btn-danger">Logout</button></form>
+                            </li>
                     }
                 </ul>
             </div>
@@ -36,15 +41,10 @@
             @RenderBody()
         </main>
     </div>
-
-    @* <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2022 - iTravel - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer> *@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
+
 </html>
